--- a/BDOBossTimer/app/src/main/AndroidManifest.xml
+++ b/BDOBossTimer/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Settings"
+            android:label="@string/app_name" />
+        <activity android:name=".firstTimeUseActivity"></activity>
     </application>
 
 </manifest>
