--- a/BDOBossTimer/app/src/main/AndroidManifest.xml
+++ b/BDOBossTimer/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,6 +22,8 @@
             android:name=".Settings"
             android:label="@string/app_name" />
         <activity android:name=".firstTimeUseActivity"></activity>
+
+        <receiver android:name=".AlarmReceiver"></receiver>
 
     </application>
 
