--- a/BDOBossTimer/app/build.gradle
+++ b/BDOBossTimer/app/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.android.support:recyclerview-v7:27.+'
     implementation "com.android.support:support-compat:27.+"
+    implementation 'com.google.android.gms:play-services-ads:17.0.0'
+    implementation 'com.google.android.ads.consent:consent-library:1.0.6'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
