--- a/BDOBossTimer/app/src/main/AndroidManifest.xml
+++ b/BDOBossTimer/app/src/main/AndroidManifest.xml
@@ -32,6 +32,10 @@
 
         </receiver>
 
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-6028798031014902~9858159713"/>
+
     </application>
 
 </manifest>
