--- a/BDOBossTimer/app/src/main/AndroidManifest.xml
+++ b/BDOBossTimer/app/src/main/AndroidManifest.xml
@@ -30,8 +30,11 @@
             android:name=".Settings"
             android:label="@string/app_name" />
         <activity android:name=".firstTimeUseActivity"></activity>
-
-        <receiver android:name=".AlarmReceiver" android:enabled="false">
+<receiver android:name=".AlarmReceiver" android:enabled="false">
+    <intent-filter><action android:name="android.intent.action.INPUT_METHOD_CHANGED" />
+    </intent-filter>
+</receiver>
+        <receiver android:name=".BootReceiver" android:enabled="true" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
                 <action android:name="android.intent.action.INPUT_METHOD_CHANGED" />
