--- a/BDOBossTimer/app/build.gradle
+++ b/BDOBossTimer/app/build.gradle
@@ -7,9 +7,9 @@ android {
         minSdkVersion 16
         targetSdkVersion 27
        
-        versionCode 8
+        versionCode 10
 
-        versionName "1.0.8"
+        versionName "1.0.10"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -22,7 +22,10 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.+'
+    implementation "com.android.support:appcompat-v7:27.+"
+    implementation "com.android.support:customtabs:27.+"
+    implementation "com.android.support:support-v4:27.+"
+    implementation "com.android.support:support-media-compat:27.+"
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.android.support:recyclerview-v7:27.+'
     implementation "com.android.support:support-compat:27.+"
